# VendorBot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  threat_model.md
.agents/: CONTEXT.md
.agents/scripts/: validate_tool_call.py
.agents/skills/stride-threat-model/: SKILL.md
app/: agent.py  config.py  fast_api_app.py  mcp_server.py  tools.py
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
terminals/: 1.txt  2.txt
tests/: test_routing.py
tests/eval/: eval_config.yaml  generate_traces.py  grade_traces.py
tests/eval/datasets/: basic-dataset.json
