[project]
name = "vendorbot"
version = "1.0.0"
description = "VendorBot — Multi-Agent SLA Enforcement & Spot Sourcing System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.0.0a0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pre-commit>=3.3.0",
    "semgrep>=1.20.0",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
